2006-11-21 Joerg Wunsch <j@uriah.heep.sax.de>

	Implement debugWire programming support.
	* avrpart.h: Implement debugWire support.
	* config_gram.y: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* jtagmkII.h: (Ditto.)
	* lexer.l: (Ditto.)
	* avrdude.conf.in: Add the new dW programmers.
	* avrdude.1: Document the dW support.
	* doc/avrdude.texi: (Ditto.)

2006-11-20 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkI.c (jtagmkI_close): remove two unused variables.

2006-11-20 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr.c: Replace the fallback of avr_read_byte() and avr_write_byte() to
	avr_read_byte_default() and avr_write_byte_default (resp.) by directly
	calling the latter functions from within all programmers that don't
	implement their own read_byte()/write_byte() methods.  In turn, make the
	read_byte() and write_byte() methods mandatory, and the cmd() method
	(direct ISP command) optional instead (it's effectively mandatory for
	any programmer using avr_read_byte_default()/avr_write_byte_default()
	though).  Remove all the pointless cmd() method stubs from those programmers
	that don't need it.
	Eliminate avr_read_byte() as it was now completely identical to
	pgm->read_byte().
	* avr.h: (Ditto.)
	* bitbang.c: (Ditto.)
	* butterfly.c: (Ditto.)
	* jtagmkI.c: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* par.c: (Ditto.)
	* pgm.c: (Ditto.)
	* safemode.c: (Ditto.)
	* serbb_posix.c: (Ditto.)
	* serbb_win32.c: (Ditto.)
	* stk500.c: (Ditto.)
	* stk500v2.c: (Ditto.)
	* term.c: (Ditto.)
	* usbasp.c: (Ditto.)

2006-11-13 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkI.c: Avoid sending a CMD_RESET when leaving programming
	mode, and CMD_GO when closing the connection.  They cause the
	activity LED on the ICE to continue to flicker, and are not
	necessary anyway (the target starts to run by itself when leaving
	programmng mode).
	This is a partial fix for bug #18262: JTAGMKI/JTAG1 Reset Bug

2006-11-12 Colin O'Flunn <coflynn@newae.com>

	* avrdude.conf.in: Add read command for lockbits for Tiny2313.